# Video-Game-Ranker

./: README.txt
Algorithms/: CMakeLists.txt
Algorithms/Comparison/: CMakeLists.txt  main.cpp
Algorithms/Comparison/SrcH/: NodeMapH.h
Algorithms/Comparison/SrcH/Fundamentals/: DataNodeH.cpp  FunctionsH.cpp  FunctionsH.h
Algorithms/Comparison/SrcT/: DataNodeT.h  FunctionsT.cpp  FunctionsT.h  gameTreeT.h
Algorithms/Graph/: CMakeLists.txt
Algorithms/Graph/Src/: DataNode.cpp  DataNode.h  DataNodeT.cpp  FunctionsH.cpp  FunctionsH.h  FunctionsT.cpp  FunctionsT.h  ReadData.cpp  gameTree.cpp  gameTree.h  gameTreeT.cpp  main.cpp
Algorithms/Hashmap/: CMakeLists.txt
Algorithms/Hashmap/Src/: DataNode.cpp  DataNode.h  GenreMap.cpp  GenreMap.h  GenreMapH.cpp  GenreMapH.h  HashMap.cpp  HashMap.h  NodeMap.cpp  NodeMap.h  NodeMapH.cpp  ReadData.cpp  ReadData.h  main.cpp
Algorithms/Hashmap/Src/Fundamentals/: DataNode.cpp  DataNode.h  DataNodeH.h  Functions.cpp  Functions.h  FunctionsH.cpp  FunctionsH.h  ReadData.cpp
C++Code/: CMakeLists.txt  Functions.cpp  Functions.h  GAME DATA BASE.txt  main.cpp
C++Code/src/: Functions.cpp  Functions.h  main.cpp
DataCollector/: pom.xml
DataCollector/src/: Main.java
DataCollector/src/Data/: DataTEST.txt
Extras/: Group Feedback.docx  Report_143.docx  Report_Group143.docx
Extras/Final Submission/: Report_Group143.docx
FilterData/: CMakeLists.txt  dataSort.cpp  dataSort.h  main.cpp
Java/: pom.xml
Java/src/: Main.java
